# product_microservice

./: .dockerignore  Cargo.toml  DEV  Dockerfile  Makefile  README.md
devnotes/: category.md  images.md
src/: main.rs  prelude.rs  product.rs  quantity.rs  sku.rs
