[package]
authors = ["Peter <mezeipetister@gmail.com>"]
edition = "2018"
name = "product_microservice"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
futures = "0.3.5"
# prelude = {git = "https://github.com/gardenzilla/prelude"}
nanoid = "0.3.0"
prost = "0.6"
protos = {git = "https://github.com/gardenzilla/protos"}
rand = "0.7.3"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
storaget = "0.8.1"
tokio = {version = "0.2", features = ["full"]}
tonic = "0.3"

[build-dependencies]
tonic-build = "0.3"
